# llm-quality-gate

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  config.yaml  demo_ci_performance.py  llmq  main.py  pyproject.toml  requirements.txt  task.md
.github/workflows/: llm-quality-gate.yml
.kiro/: plan.md
ci/: api_quality_gate.py  runner.py
cli/: __init__.py  main.py
core/: __init__.py  config.py  errors.py
dashboard/: __init__.py  api.py  app.py
dashboard/static/: index.html
dashboard/static/css/: dashboard.css
dashboard/static/js/: api.js  app.js  charts.js  components.js  pages.js  state.js
docs/: PRESENTATION_ASSETS.md  ci-performance-optimizations.md  demo.html  demo.tape
evals/: __init__.py  comprehensive_runner.py  config_utils.py  dataset.json  dataset.py  maintenance.py  metrics.py  runner.py  service.py  validator.py
integrations/cli/: __init__.py  main.py
llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  groq.py  huggingface.py  localai.py  ollama.py  openai.py  openrouter.py
storage/: __init__.py  database.py  models.py  repository.py
tests/: __init__.py  test_api_v1.py  test_ci_performance.py  test_cli_entry_point.py  test_evals.py  test_llm_providers.py  test_metrics.py  test_provider_refactor.py  test_storage.py
website/app/: globals.css  layout.tsx  page.tsx
website/components/: Architecture.tsx  CodeExample.tsx  Documentation.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Problem.tsx  Screenshots.tsx  Solution.tsx
